# Rust-rocket-mongoDB-token-auth-REST-API-boilerplate

./: .gitignore  Cargo.toml  README.md
src/: const.rs  constants.rs  helper.rs  main.rs  model_user.rs  private.sample.rs
src/database/: connect_to_db.rs  impl_mondo_db.rs  mod.rs  url_mongo_db.rs
src/error_response/: error_responses.rs
src/models/: mod.rs  model_user.rs
src/models/request/: mod.rs
src/routes/: authorization.rs  cors.rs  login.rs  mod.rs  validator_authorization.rs
src/routes/authorization/: login.rs  mod.rs  registration.rs
src/routes/authorization/token/: create_token.rs  mod.rs  request_access_token.rs  request_refresh_token.rs
src/routes/routes/: get_data_user.rs  hello_name.rs  mod.rs  patch_user.rs  refresh_tokens.rs
src/routes/routes_models/: mod.rs  registration_request.rs
src/routes/test_routes/: hello_name.rs  hello_name_test.rs  mod.rs
