[package]
name = "rust_rest_api_boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Yura <leonyvb04@gmail.com> Batazov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"]}
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0.0", eatures = ["serde", "v4"] }
bcrypt = "0.13.0"
chrono = "0.4.19"
rocket-validation = "0.1.0"
jsonwebtoken = "8.1.0"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"